Fix spacing on main

--- a/main.scss
+++ b/main.scss
@@ -166,6 +166,7 @@ main {
 
   &__subtext {
     margin-top: 1rem;
+    margin-right: 2rem;
     font-weight: normal;
 
     @media screen and (max-width: $bp-medium) {
@@ -251,6 +252,7 @@ footer {
 
 .rights {
   grid-area: rights;
+  line-height: 2.5rem;
 
   @media screen and (max-width: $bp-medium) {
     text-align: center;
